// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders CSF2Secondary story 1`] = `
<body>
  <div>
    <div
      data-story="true"
      id="storybook-story-example-button--csf-2-secondary"
    >
      <button
        class="storybook-button storybook-button--secondary storybook-button--medium"
        type="button"
      >
        label coming from story args!
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF2StoryWithParamsAndDecorator story 1`] = `
<body>
  <div>
    <div
      data-story="true"
      id="storybook-story-example-button--csf-2-story-with-params-and-decorator"
    >
      <div
        style="margin: 3em;"
      >
        <button
          class="storybook-button storybook-button--secondary storybook-button--medium"
          type="button"
        >
          foo
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3Button story 1`] = `
<body>
  <div>
    <div
      data-story="true"
      id="storybook-story-example-button--csf-3-button"
    >
      <button
        class="storybook-button storybook-button--secondary storybook-button--medium"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3ButtonWithRender story 1`] = `
<body>
  <div>
    <div
      data-story="true"
      id="storybook-story-example-button--csf-3-button-with-render"
    >
      <div>
        <p
          data-testid="custom-render"
        >
          I am a custom render function
        </p>
        <button
          class="storybook-button storybook-button--secondary storybook-button--medium"
          type="button"
        >
          foo
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3InputFieldFilled story 1`] = `
<body>
  <div>
    <div
      data-story="true"
      id="storybook-story-example-button--csf-3-input-field-filled"
    >
      <input
        data-testid="input"
      />
    </div>
  </div>
</body>
`;

exports[`Renders CSF3Primary story 1`] = `
<body>
  <div>
    <div
      data-story="true"
      id="storybook-story-example-button--csf-3-primary"
    >
      <button
        class="storybook-button storybook-button--primary storybook-button--large"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders LoaderStory story 1`] = `
<body>
  <div>
    <div
      data-story="true"
      id="storybook-story-example-button--loader-story"
    >
      <div>
        <div
          data-testid="loaded-data"
        >
          loaded data
        </div>
        <div
          data-testid="spy-data"
        >
          mockFn return value
        </div>
      </div>
    </div>
  </div>
</body>
`;
